--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.3"
+    "mongoose": "^5.9.3",
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
