--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.3",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "ws": "^7.2.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
